[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_ship.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="enemy_ship" type="KinematicBody2D"]
position = Vector2( 0, -0.902496 )
collision_layer = 4
collision_mask = 19
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0.0666667, 0.109804, 1 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="tween" type="Tween" parent="."]

[node name="port_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -140, 0 )
collision_mask = 3

[node name="port_bow_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -250, -90 )
collision_mask = 3

[node name="port_stern_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -250, 90 )
collision_mask = 3

[node name="star_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 140, 0 )
collision_mask = 3

[node name="star_bow_ray" type="RayCast2D" parent="."]
position = Vector2( 0, -0.814514 )
enabled = true
cast_to = Vector2( 250, -90 )
collision_mask = 3

[node name="star_stern_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 250, 90 )
collision_mask = 3
